--- a/exercicios/ex003/index.html
+++ b/exercicios/ex003/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test with images</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>Test with images and icon</title>
 </head>
 <body>
     <h1>Testing load and images</h1>
