Aulas até inserção de audios

--- a/exercicios/ex002/index.html
+++ b/exercicios/ex002/index.html
@@ -31,7 +31,7 @@
         &uparrow; <!--uarr-->
     </p>
     <p>
-        Let inser some emojis:
+        Let insert some emojis:
         &#x1F918;
         &#x1F913;
     </p>
