--- a/exercicios/ex005/index.html
+++ b/exercicios/ex005/index.html
@@ -33,7 +33,7 @@
         texto marcado que sobrescreve o padrão definido (override)
     </mark>e usa a tag &lt;mark&gt;</p>
     <p>
-        E em outro parágrafo, <mark>outra marcação definida na Head,</mark> herda o default definido no style
+        E em outro parágrafo, <mark>outra marcação definida na Head,</mark> (herda) o default definido no style
     </p>
     <h2>Texto grande e pequeno</h2>
     <p>Estamos criando um <big>texto grande</big> e um <small>texto pequeno</small> nesse parágrafo</p>
