--- a/exercicios/ex006/index.html
+++ b/exercicios/ex006/index.html
@@ -6,7 +6,7 @@
     <title>Outras Formatações</title>
 </head>
 <body>
-    <h1>Outras Formatações</h1>
+    <h1 class="title">Outras Formatações</h1>
     <h2>Código-Fonte</h2>
     <p>O comando <code>document.getElementById('teste')</code> é escrito em javascript</p>
     <pre>
