--- a/desafios/modulo-01/d005/index.html
+++ b/desafios/modulo-01/d005/index.html
@@ -4,13 +4,13 @@
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Desafio 05</title>
 </head>
 <body>
     <h1>Minhas redes sociais</h1>
     <h2>Quem é Rodrigo?</h2>
     <img src="imagens/cortada.png" alt="Eu">
-    <p>Meu nome é <strong>Rodrigo</strong>, <br> sou Analista Desenvolvedor <br> na AmbevTech e apaixonado <br> por tecnologia e ggames.</p>
+    <p>Meu nome é <strong>Rodrigo</strong>, <br> sou Analista Desenvolvedor <br> na AmbevTech e apaixonado <br> por tecnologia e games.</p>
     <h2>Como falar comigo?</h2>
     <ul type="square">
         <li>
