--- a/desafios/modulo-01/d003/index.html
+++ b/desafios/modulo-01/d003/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Desafio 03</title>
 </head>
 <body>
     <h1>Desafio do Mapa</h1>
