--- a/desafios/modulo-01/d004/index.html
+++ b/desafios/modulo-01/d004/index.html
@@ -4,24 +4,24 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Desafio 04</title>
 </head>
 <body>
     <h1>Emojis Favoritos</h1>
     <h2>Carinhas</h2>
-    <ul>
+    <ul type="circle">
         <li>&#x1F913; <strong>Código U+1F913</strong></li>
         <li>&#x1F92F; <strong>Código U+1F92F</strong></li>               
         <li>&#x1F976; <strong>Código U+1F976</strong></li>
     </ul>
     <h2>Mãos</h2>
-    <ul>
+    <ul type="square">
         <li>&#x1F596; <strong>Código U+1F596</strong></li>
         <li>&#x1F91D; <strong>Código U+1F91D</strong></li>
         <li>&#x1F44D <strong>Código U+1F44D</strong></li>
     </ul>
     <h2>Animais</h2>
-    <ul>
+    <ul type="disc">
         <li>&#x1F431; <strong>Código U+1F431</strong></li>
         <li>&#x1F436; <strong>Código U+1F436</strong></li>
         <li>&#x1F981; <strong>Código U+1F981</strong></li>
