--- a/desafios/modulo-01/d007/index.html
+++ b/desafios/modulo-01/d007/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imagem flexivel</title>
+    <title>Desafio 07</title>
 </head>
 <body>
     <h1>Imagem Flexível</h1>
