--- a/desafios/modulo-01/d008/index.html
+++ b/desafios/modulo-01/d008/index.html
@@ -8,7 +8,7 @@ body {
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navegação</title>
+    <title>Desafio 08</title>
 </head>
 <body>
     <h1>Desafio da Navegação</h1>
