--- a/desafios/modulo-01/d009/index.html
+++ b/desafios/modulo-01/d009/index.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <style>
-      body {
-        font-size: 15pt;
-        background-color: black;
-        color: white;
-        text-align: center;
-      }
-    </style>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meus vídeos</title>
-  </head>
-  <body>
-    <h1>Vídeos legais para assistir</h1>
-    <p>
-      <a href="html.html" target="_self" rel="next"
-        ><img src="imagens/thumb-html.png" alt="HTML5"
-      /></a>
-      <a href="javascript.html" target="_self" rel="next"
-        ><img src="imagens/thumb-js.png" alt="JS"
-      /></a>
-    </p>
-    <p>
-      <a href="hardware.html" target="_self" rel="next"
-        ><img src="imagens/thumb-hardware.png" alt="Hardware"
-      /></a>
-      <a href="python.html" target="_self" rel="next"
-        ><img src="imagens/thumb-python.png" alt="Python"
-      /></a>
-    </p>
-  </body>
+
+<head>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <style>
+    body {
+      font-size: 15pt;
+      background-color: black;
+      color: white;
+      text-align: center;
+    }
+  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Desafio 09</title>
+</head>
+
+<body>
+  <h1>Vídeos legais para assistir</h1>
+  <p>
+    <a href="html.html" target="_self" rel="next"><abbr title="Curso HTML5"><img src="imagens/thumb-html.png"
+          alt="HTML5" /></abbr></a>
+    <a href="javascript.html" target="_self" rel="next"><abbr title="Curso de Javascript"><img
+          src="imagens/thumb-js.png" alt="JS" /></abbr></a>
+  </p>
+  <p>
+    <a href="hardware.html" target="_self" rel="next"><abbr title="Curso de Hardware"><img
+          src="imagens/thumb-hardware.png" alt="Hardware" /></abbr></a>
+    <a href="python.html" target="_self" rel="next"><abbr title="Curso de Python"><img src="imagens/thumb-python.png"
+          alt="Python" /></abbr></a>
+  </p>
+</body>
+
 </html>
