--- a/exercicios/ex003/index.html
+++ b/exercicios/ex003/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +14,5 @@
     <img src="images/babyyoda-full2.jpeg" alt="Baby Yoda">
     <p>Testing load and external images</p>
     <img src="https://icons.iconarchive.com/icons/3xhumed/mega-games-pack-02/128/Mortal-Combat-Deadly-Alliance-icon.png" alt="Mortal Kombat V">
-
 </body>
 </html>
