--- a/exercicios/ex005/index.html
+++ b/exercicios/ex005/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,7 +29,7 @@
         Eu moro na <address>R Venezuela  - Maringá PR</address>
     </p> 
     <h2>Texto marcado</h2>   
-    <p>Podemos também criar um <mark style="background-color: rgb(0, 255, 255);">
+    <p>Podemos também criar um <mark style="background-color: rgb(0, 255, 255)">
         texto marcado que sobrescreve o padrão definido (override)
     </mark>e usa a tag &lt;mark&gt;</p>
     <p>
@@ -43,7 +43,7 @@
     <p>Indica que o texto foi <ins>adicionado depois</ins></p>
     <p>Existe também <u>sublinhado</u> (Não semântica)</p>
     <h2>Texto sobrescrito</h2>
-    <p>Para inserir texto do tipo x<sup>2</sup> + 20</p>
+    <p>Para inserir texto do tipo x<sup>2</sup> - 3x + 5</p>
     <h2>Texto subscrito</h2>
     <p>Para inserir texto do tipo H<sub>2</sub>O</p>
 </body>
