--- a/exercicios/ex007/index.html
+++ b/exercicios/ex007/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Trabalhando com listas</h1>
     <h2>Listas ordenadas</h2>
     1 - Acordar
     2 - Tomar café
     3 - Escovar os dentes
-    4 - Sair com cão  
-    <ol type="1" start="0"> <!--1 A a I i-->
+    4 - Sair com cão
+    <ol type="1" start="0">
+        <!--1 A a I i-->
         <li>Acordar</li>
         <li>Tomar café</li>
         <li>Escovar os dentes</li>
         <li>Sair com o cão</li>
     </ol>
     <h2>Listas não ordenadas</h2>
-    <ul type="circle"> <!--disc circle square-->
+    <ul type="circle">
+        <!--disc circle square-->
         <li>Pão</li>
         <li>Leite</li>
         <li>Arroz</li>
@@ -28,17 +32,25 @@
     <h2>Linguagens favoritas</h2>
     <ol type="1">
         <li>Antigas</li>
-            <ol type="a">
-                <li>C</li>
-                <li>Java</li>
-            </ol>
+        <ol type="a">
+            <li>C++</li>
+            <li>Java</li>
+        </ol>
         <li>Novas</li>
-        <ol type="a" start="3"><li>C#</li></ol>        
+        <ol type="a" start="3">
+            <li>C#</li>
+        </ol>
     </ol>
     <h2>Lista de definições</h2>
     <dl>
-        <dt>HTML</dt> <!--Termo-->
-        <dd>Linguagem de marcação para criação de conteúdo em sites.</dd> <!--Descrição-->
+        <dt>HTML</dt>
+        <!-- Definition Term e Definition Description-->
+        <dd>Linguagem de marcação para criação de conteúdo em sites.</dd>        
+        <dt>CSS</dt>
+        <dd>Linguagem de marcação para a criação do design em sites.</dd>
+        <dt>JavaScript</dt>
+        <dd>Linguagem de programação para a criação de interatividade em sites.</dd>
     </dl>
 </body>
+
 </html>
