--- a/exercicios/ex008/index.html
+++ b/exercicios/ex008/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>Trabalhando com links externos</h1>
-    <p>Acessar o repositório publico no <a href="https://github.com/rmarnon" target="_blank" rel="external">github</a></p>
+    <p>Acessar o repositório publico no <a href="https://github.com/rmarnon" target="_blank" rel="nofollow">github</a></p>
 
     <h1>Trabalhando com links internos</h1>
-    <p>Acessar link <a href="home.html" target="_self" rel="next">Home</a> de testes</p>
+    <p>Acessar link <a href="home/home.html" target="_self" rel="next">Home</a> de testes</p>
 
     <h1>Links para download</h1>
     <ul>
