--- a/exercicios/ex009/index.html
+++ b/exercicios/ex009/index.html
@@ -11,7 +11,7 @@
     <picture>
         <source media="(max-width: 750px)" srcset="imagens/p.png" type="image/png">
         <source media="(max-width: 1050px)" srcset="imagens/m.png" type="image/png">
-        <img src="imagens/g.png" alt="Grande">
+        <img src="imagens/g.png" alt="Imagem flexível">
     </picture>
     <h1>Reproduzindo</h1>
     <p>Reproduzindo audio em HTML5</p>
