--- a/exercicios/ex006/index.html
+++ b/exercicios/ex006/index.html
@@ -6,22 +6,22 @@
     <title>Outras Formatações</title>
 </head>
 <body>
-    <h1 class="title">Outras Formatações</h1>
+    <h1>Outras Formatações</h1>
     <h2>Código-Fonte</h2>
-    <p>O comando <code>document.getElementById('teste')</code> é escrito em javascript</p>
+    <p>O comando <code>document.getElementById('teste')</code> é escrito em javaScript</p>
     <pre>
         <code>
         If (num % 2 == 0)
             print(par);
         else 
             print(impar);
-        </code></pre> <!--Mantem identação-->
+        </code></pre> <!--Mantem identação, quebra de linha e tabulação-->
     <h2>Citações simples</h2>    
-    <p>Como diria um um amigo: <q>o computador é um burro rápido</q></p>
+    <p>Como diria um um amigo: <q>O computador é um burro rápido</q></p>
     <h2>Citações completas</h2>
     <p>Segundo Jeff Noble em seu livro HTML para leigos:</p>
     <blockquote cite="example.com">
-        A diferença entre o quote e o blockquote e que ele vai ser deslocado a direita.
+        A diferença entre o quote e o blockquote e que ele vai ser deslocado a direita e sem as "apas".
     </blockquote>
     <h2>Abreviações</h2>
     <p>Estou estudando <abbr title="Hyper Text Markup Language">HTML</abbr> e <abbr title="Cascading Style Sheets">CSS</abbr></p>
