--- a/exercicios/ex008/home/home.html
+++ b/exercicios/ex008/home/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Teste de link interno</h1>
-    <p>Voltar <a href="index.html" target="_self" rel="prev">&blacktriangleleft;</a></p>
+    <p>Voltar <a href="../index.html" target="_self" rel="prev">&blacktriangleleft;</a></p>
 </body>
 </html>
