estudos livro html css projete e construa sites

--- a/CEV/HTML-CSS/exercicios/ex0012/index.html
+++ b/CEV/HTML-CSS/exercicios/ex0012/index.html
@@ -25,6 +25,6 @@
     <h3>2.1 - Os instruments de gestão</h3>
     <h4>2.1.1 - Os instrumentos de planejamento</h4>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet eum temporibus odio, ipsa, mollitia cum laboriosam tempora pariatur est voluptates praesentium officia aperiam, quidem molestias saepe. Ipsum molestias fuga perspiciatis?</p>    
-    <p style="text-align: right;"><a href="pagina02.html" target="_self">Ir para a página 02</a></p>
+    <p class="footer"><a href="pagina02.html" target="_self">Ir para a página 02</a></p>
 </body>
 </html>
