--- a/CEV/HTML-CSS/exercicios/ex0012/pagina02.html
+++ b/CEV/HTML-CSS/exercicios/ex0012/pagina02.html
@@ -10,6 +10,6 @@
     <h1>Segunda página</h1>
     <h2>Teste de estilo</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ullam temporibus nobis, repellat modi minus delectus neque quis laborum corporis illo, tenetur maiores quisquam deleniti eveniet voluptatibus ipsum consectetur laudantium!</p>
-    <p><a href="index.html" target="_self">Voltar</a></p>
+    <p id="footer"><a href="index.html" target="_self">Voltar</a></p>
 </body>
 </html>
