--- a/CEV/HTML-CSS/exercicios/ex009/index.html
+++ b/CEV/HTML-CSS/exercicios/ex009/index.html
@@ -9,9 +9,9 @@
     <h1>Imagem dinâmica</h1>
     <p>Tente abrir esse site em vários dispositivos ou aumente e diminua o tamanho do navegador</p>
     <picture>
-        <source media="(max-width: 750px)" srcset="imagens/p.png" type="image/png">
+        <source media="(max-width: 750px)" srcset="imagens/p.png">
         <source media="(max-width: 1050px)" srcset="imagens/m.png" type="image/png">
-        <img src="imagens/g.png" alt="Imagem flexível">
+        <img src="imagens/g.png" alt="Imagem flexível" title="Imagem em tamanho variável">
     </picture>
     <h1>Reproduzindo</h1>
     <p>Reproduzindo audio em HTML5</p>
